--- a/BhagavadGita/BhagavadGita/Views/Home/Contact.cshtml
+++ b/BhagavadGita/BhagavadGita/Views/Home/Contact.cshtml
@@ -6,18 +6,127 @@
         padding: 0px !important;
         width: 100% !important;
     }
+
+    input, select, textarea {
+        max-width: unset;
+    }
+
+    .width-100{
+        width: 100% !important;
+    }
+
+    th, td {
+        padding: 0px 15px;
+    }
+
+    #form {
+        width: 50%;
+        height: 78vh;
+        position: relative;
+        /*transform: translate(-50%,-50%);*/
+        top: 0%;
+        /*left: 24%;*/
+        border-radius: 10px;
+        padding: 40px 20px;
+        box-shadow: -10px -10px 15px rgba(255,255,255,0.55), 10px 10px 15px rgba(70,70,70,0.12);
+        margin: 30px 0;
+        width: 50%;
+        margin: 0px auto;
+        padding: 24px;
+    }
+
+    #note{
+        color: red;
+    }
+
 </style>
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<link rel="stylesheet" href="~/Content/Contact.css" />
+<div id="form">
+    <div>
+        <table class="width-100">
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+            </tr>
+            <tr>
+                <td>
+                    <input type="text" class="width-100" name="fname" id="fname" placeholder="Enter your First Name" onkeyup="check()">
+                </td>
+                <td>
+                    <input type="text" class="width-100" name="lname" id="lname" placeholder="Enter your Last Name" onkeyup="check()">
+                </td>
+            </tr>
+        </table>
+    </div>
+    <h6>Who are you?</h6>
+    <input type="radio" name="job" id="devotee" value="Devotee" onclick="check()">
+    <input type="radio" name="job" id="nonDevotee" value="Non Devotee" onclick="check()">
+    <h6>Email</h6>
+    <input type="email" class="width-100" name="email" placeholder="yourEmailId@domain.com" onkeyup="check()">
+    <h6>Message</h6>
+    <textarea class="width-100" name="message" placeholder="Enter your message here..." onkeyup="check()"></textarea>
+    <button type="button" id="btnSubmit" class="submit" onclick="submitFun()" disabled>SUBMIT</button>
+    <br />
+    <p><span id="note">NOTE:</span> All fields are mandatory</p>
+</div>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<script>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+    function check() {
+        var fname = document.getElementsByName("fname")[0].value;
+        var lname = document.getElementsByName("lname")[0].value;
+        var job = document.querySelector('input[name="job"]:checked').value;
+        var email = document.getElementsByName("email")[0].value;
+        var message = document.getElementsByName("message")[0].value;
+        var msgLength = message.length;
+
+        if (fname == "" || lname == "" || job == "" || email == "" || message == "" || msgLength < 30) {
+            $("#btnSubmit").attr("disabled", true);
+        } else {
+            $("#btnSubmit").attr("disabled", false);
+        }
+    }
+    function submitFun() {
+        var fname = document.getElementsByName("fname")[0].value;
+        var lname = document.getElementsByName("lname")[0].value;
+        var job = document.querySelector('input[name="job"]:checked').value;
+        var email = document.getElementsByName("email")[0].value;
+        var message = document.getElementsByName("message")[0].value;
+        let text = "Are you sure you want to submit?";
+        confirm(text) ? confirmSubmit(fname, lname, job, email, message) : null;
+    }
+
+    function confirmSubmit(fname, lname, job, email, message) {
+        
+        console.log(fname + " || " + lname + " || " + job + " || " + email + " || " + message);
+        var data = new FormData();
+        data.append('fname', fname);
+        data.append('lname', lname);
+        data.append('job', job);
+        data.append('email', email);
+        data.append('message', message);
+        jQuery.ajax({
+            url: '/Home/ContactUsForm',
+            data: data,
+            cache: false,
+            contentType: false,
+            processData: false,
+            method: 'POST',
+            type: 'POST',
+            success: function (data) {
+                var data = data.data;
+                var len = data.length;
+                console.log(data);
+                //console.log("Len: " + len);
+                console.log('Data inserted Succcessfully');
+            }
+        });
+        //resetForm($('#contactUsForm'));
+    }
+
+    function resetForm($form) {
+        $form.find('input:text, input:password, input:file, select, textarea').val('');
+        $form.find('input:radio, input:checkbox')
+            .removeAttr('checked').removeAttr('selected');
+    }
+</script>
