--- a/BhagavadGita/BhagavadGita/Views/Shared/_Layout.cshtml
+++ b/BhagavadGita/BhagavadGita/Views/Shared/_Layout.cshtml
@@ -29,9 +29,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Home", "Home")</li>
-                    <li>@Html.ActionLink("API", "API", "Home")</li>
+                    <li>@Html.ActionLink("API", "API", "API")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li><a href="https://codex-roan.vercel.app/" target="_blank">CODEX</a></li>
                 </ul>
             </div>
         </div>
