--- a/BhagavadGita/BhagavadGita/Content/index.css
+++ b/BhagavadGita/BhagavadGita/Content/index.css
@@ -17,6 +17,21 @@
     background-size: cover;
 }
 
+.randomCoverImg {
+    /* The image used */
+    background-image: url("../images/feather.jpg");
+    /* Full height */
+    height: 46em;
+    /* Add the blur effect */
+    filter: blur(4px);
+    -webkit-filter: blur(4px);
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
 /* Position text in the middle of the page/image */
 .bg-text {
     background-color: rgb(0,0,0); /* Fallback color */
@@ -61,5 +76,22 @@ a {
     transform: scale(1.03);
     color: white;
     box-shadow: 7px 7px 15px 6px rgba(55, 55, 55, 0.2), -7px -7px 15px #ddd, inset 8rem 0 4px #ff9900, inset 0 0 0 transparent;
+    border-color: #ff8033;
+}
+
+.button-square-right-random {
+    margin-top: 20px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    border: 3px solid rgb(230, 230, 230);
+    color: rgba(100, 100, 100, 0.75);
+    background: #cfcfcf;
+    box-shadow: 7px 7px 15px #d9d9d9, -7px -7px 15px #ffffff, inset 0 0 0 transparent, inset 0 0 0 transparent;
+    transition: 0.5s ease-in-out;
+}
+
+.button-square-right-random:hover {
+    transform: scale(1.03);
+    color: white;
+    box-shadow: 7px 7px 15px 6px rgba(55, 55, 55, 0.2), -7px -7px 15px #ddd, inset 15rem 0 4px #ff9900, inset 0 0 0 transparent;
     border-color: #ff8033;
 }
