Repaired corrupted File

--- a/BhagavadGita/BhagavadGita/Views/Home/TestPage.cshtml
+++ b/BhagavadGita/BhagavadGita/Views/Home/TestPage.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h2>TestPage</h2>
+<span>Sorry! Can't use this one</span>
 <hr />
 <!-- Include stylesheet -->
 <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
