Added "AboutDev" Page and "Info" dropdown.

--- a/BhagavadGita/BhagavadGita/Views/Home/Random.cshtml
+++ b/BhagavadGita/BhagavadGita/Views/Home/Random.cshtml
@@ -35,8 +35,8 @@
             success: function (data) {
                 var data = data.data;
                 var len = data.length;
-                console.log(data);
-                console.log("Len: " + len);
+                //console.log(data);
+                //console.log("Len: " + len);
                 //console.log(data[0]);
                 console.log(box);
                 box.innerHTML = `
