--- a/BhagavadGita/BhagavadGita/Views/Shared/_Layout.cshtml
+++ b/BhagavadGita/BhagavadGita/Views/Shared/_Layout.cshtml
@@ -31,7 +31,16 @@
                     <li>@Html.ActionLink("Home", "Home", "Home")</li>
                     <li>@Html.ActionLink("Random", "Random", "Home")</li>
                     <li>@Html.ActionLink("API", "API", "API")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Info<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("About", "About", "Home")</li>
+                            <li>@Html.ActionLink("About Dev", "AboutDev", "Home")</li>
+                            @*<li role="separator" class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                            <li role="separator" class="divider"></li>*@
+                        </ul>
+                    </li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li><a href="https://codex-roan.vercel.app/" target="_blank">CODEX</a></li>
                 </ul>
